perf(subsonic): resource handle switch